Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11153

the uninitialized variable "ver" could be used in qmt_set

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • None
    • None
    • 3
    • 9223372036854775807

      in qmt_set, the "ver" is only initialized if the new quota setting will be written back to disk,
      but for default quota setting, it is not needed to write back and the "ver" is not initialized.

            hongchao.zhang Hongchao Zhang
            hongchao.zhang Hongchao Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: