LU-11153 quota: initialize ver for default quota

In qmt_set_with_lqe, the variable "ver" is not initialized
if the lqe using the default quota is being updated to use
new default quota setting.

Change-Id: I578543fc69009ef85c667092a66947d3c98a6a7d
Signed-off-by: Hongchao Zhang <hongchao@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/32827
Tested-by: Jenkins
Reviewed-by: Alex Zhuravlev <bzzz@whamcloud.com>
Reviewed-by: Wang Shilong <wshilong@whamcloud.com>
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Minh Diep <mdiep@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>